--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lint": "turbo lint",
     "type-check": "turbo type-check",
     "clean": "turbo clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "cleanup": "echo 'Cleaning up node_modules, .next, .vercel, & .turbo folders.' && find . \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' -o -name '.vercel' \\) -type d -prune -exec rm -rf '{}' +",
+    "types": "supabase --workdir ./apps/backend gen types typescript --schema public --local > ./apps/app/src/types/database.d.ts"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
