--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,6 +13,7 @@
     "@repo/ui": "workspace:*",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.6",
+    "geist": "^1.2.2",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
