--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "tailwindcss": "^3.4.1"
+    "@types/node": "^20.11.17",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
