--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "./daemon.sh"
+    "dev": "daemon.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "supabase": "^1.148.6"
+  }
 }
