--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@repo/typescript-config": "workspace:*",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "turbo": "latest"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "turbo": "^1.13.3"
   },
   "packageManager": "pnpm@9.0.6",
   "engines": {
     "node": ">=18"
+  },
+  "volta": {
+    "node": "20.12.0"
   }
 }
