--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
-    "@vercel/style-guide": "^5.2.0",
-    "eslint-config-turbo": "^1.12.5"
+    "@vercel/style-guide": "^6.0.0",
+    "eslint-config-turbo": "^1.13.3"
+  },
+  "volta": {
+    "node": "20.12.0"
   }
 }
