--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -7,8 +7,11 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^20.11.28",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "^20.12.8",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "volta": {
+    "node": "20.12.0"
   }
 }
