--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,19 +24,23 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/react": "^18.2.66",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "^20.12.8",
+    "@types/react": "^18.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "tailwindcss": "^3.4.3",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.330.0",
-    "tailwind-merge": "^2.2.1"
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
+    "tailwind-merge": "^2.3.0"
+  },
+  "volta": {
+    "node": "20.12.0"
   }
 }
