--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
-  "private": true,
+  "name": "monocle-starter",
+  "description": "",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heymonocle/starter.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/heymonocle/starter/issues"
+  },
+  "homepage": "https://github.com/heymonocle/starter",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -15,7 +28,7 @@
     "@repo/typescript-config": "workspace:*",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@9.0.6",
   "engines": {
     "node": ">=18"
   }
