--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
   "name": "monocle-starter",
-  "description": "",
   "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "homepage": "https://github.com/heymonocle/starter",
+  "bugs": {
+    "url": "https://github.com/heymonocle/starter/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/heymonocle/starter.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/heymonocle/starter/issues"
-  },
-  "homepage": "https://github.com/heymonocle/starter",
+  "author": "",
   "scripts": {
     "build": "turbo build",
+    "clean": "turbo clean",
+    "cleanup": "echo 'Cleaning up node_modules, .next, .vercel, & .turbo folders.' && find . \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' -o -name '.vercel' \\) -type d -prune -exec rm -rf '{}' +",
     "dev": "turbo dev",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
-    "clean": "turbo clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "cleanup": "echo 'Cleaning up node_modules, .next, .vercel, & .turbo folders.' && find . \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' -o -name '.vercel' \\) -type d -prune -exec rm -rf '{}' +",
     "types": "supabase --workdir ./apps/backend gen types typescript --schema public --local > ./apps/app/src/types/database.d.ts"
   },
+  "prettier": "@vercel/style-guide/prettier",
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@vercel/style-guide": "^6.0.0",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
