--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev --port 3002",
     "lint": "next lint",
+    "start": "next start",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.1",
