--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean": "turbo clean",
     "cleanup": "echo 'Cleaning up node_modules, .next, .vercel, & .turbo folders.' && find . \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' -o -name '.vercel' \\) -type d -prune -exec rm -rf '{}' +",
     "dev": "turbo dev",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json}\"",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
     "types": "supabase --workdir ./apps/backend gen types typescript --schema public --local > ./apps/app/src/types/database.d.ts"
