--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json}\"",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
-    "types": "supabase --workdir ./apps/backend gen types typescript --schema public --local > ./apps/app/src/types/database.d.ts"
+    "types": "supabase --workdir ./apps/backend gen types typescript --schema public --local > ./packages/types/database.d.ts"
   },
   "prettier": "@vercel/style-guide/prettier",
   "devDependencies": {
@@ -30,6 +30,7 @@
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "supabase": "^1.165.0",
     "turbo": "^1.13.3"
   },
   "packageManager": "pnpm@9.0.6",
