--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,10 +7,10 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "xdev": "./daemon.js"
+    "dev": "./daemon.js"
   },
   "devDependencies": {
-    "supabase": "^1.165.0"
+    "supabase": "^1.172.2"
   },
   "volta": {
     "node": "20.12.0"
