Update Turbo to 2.0 and all dependencies

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
     "SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID",
     "SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET"
   ],
-  "pipeline": {
+  "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
