--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "supabase": "^1.172.2",
     "turbo": "^2.0.3"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@9.3.0",
   "engines": {
-    "node": ">=20"
+    "node": ">=20",
+    "pnpm": ">=9"
   },
   "volta": {
     "node": "20.12.0"
